.provarCaches/00D410000011HE0EAM/objects/rstk__soctt__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_soctt</customHelpPage>
    <description>soctt__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>externalid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soctt_div__r.rstk__sydiv_div__c + &apos;_&apos; + rstk__soctt_title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soctt_title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soctt_active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this Contract Terms Template is active and available for use on Contracts.</inlineHelpText>
        <label>Template is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soctt_currev__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>System assigned Revision.  Revision is initialized to 1 on an add, and incremented as Contract Terms Clause records associated with this Contract Terms Template are modified.</inlineHelpText>
        <label>Current Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soctt_desc__c</fullName>
        <inlineHelpText>User-defined description for this Contract Terms Template.  Value can be alpha-numeric, up to 255 characters in length.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soctt_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>soctt_div__c</description>
        <inlineHelpText>The Sales Division for which this record is applicable.</inlineHelpText>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Contract Terms</relationshipLabel>
        <relationshipName>soctts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soctt_resp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Individual responsible for this Contract Terms Template.</inlineHelpText>
        <label>Responsible User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Contract Terms</relationshipLabel>
        <relationshipName>soctts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soctt_revdate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>System assigned Revision Date.  Revision Date is initialized to TODAY on an add, and updated each time a Revision is made.</inlineHelpText>
        <label>Current Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soctt_title__c</fullName>
        <inlineHelpText>User-defined name for this Contract Terms Template.  Value can be alpha-numeric, up to 50 characters in length.</inlineHelpText>
        <label>Contract Terms Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Contract Terms Template</label>
    <listViews>
        <fullName>rstk__RS_Contract_Terms_Templates</fullName>
        <columns>NAME</columns>
        <columns>rstk__soctt_div__c</columns>
        <columns>rstk__soctt_title__c</columns>
        <columns>rstk__soctt_desc__c</columns>
        <columns>rstk__soctt_active__c</columns>
        <columns>rstk__soctt_currev__c</columns>
        <columns>rstk__soctt_revdate__c</columns>
        <columns>rstk__soctt_resp__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Terms Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Terms Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Terms Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Division_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__soctt_div__c)</errorConditionFormula>
        <errorMessage>Sales Division is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Title_Required</fullName>
        <active>true</active>
        <description>Title is required</description>
        <errorConditionFormula>ISBLANK(rstk__soctt_title__c)</errorConditionFormula>
        <errorMessage>Contract Terms Template is required</errorMessage>
    </validationRules>
</CustomObject>